# AgentForge

./: .gitignore  AGENTS.md  CHANGELOG.md  CI_CD.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_zh.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  internal-skills.yaml  jest.config.ts  jest.setup.ts  mkdocs.yml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.agents/: AGENTS.md  CLAUDE.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
__mocks__/: bun-test.ts  react-diff-viewer-continued.tsx
app/: error.tsx  globals.css  globals.test.ts  layout.test.tsx  layout.tsx  page.test.tsx
docs/: GO_WASM_PLUGIN_RUNTIME.md  PRD.md  desktop-updater-release.md  go-backend-audit-report.md  index.md  role-authoring-guide.md  role-yaml.md
e2e/: template-management.spec.ts
employees/: default-code-reviewer.yaml
hooks/: use-a11y-preferences.test.ts  use-a11y-preferences.ts  use-backend-url.test.ts  use-backend-url.ts  use-breadcrumbs.test.ts  use-breadcrumbs.ts  use-breakpoint.test.ts  use-breakpoint.ts  use-keyboard-navigation.test.ts  use-keyboard-navigation.ts  use-live-artifact-projections.test.ts  use-live-artifact-projections.ts  use-mobile.test.ts  use-mobile.ts  use-platform-capability.test.ts  use-platform-capability.ts  use-plugin-enabled.test.ts  use-plugin-enabled.ts  use-project-role.test.ts  use-project-role.ts
i18n/: request.ts
lib/: api-client.test.ts  api-client.ts  backend-url.test.ts  backend-url.ts  command-palette.test.ts  command-palette.ts  cron-description.test.ts  cron-description.ts  cron-validation.test.ts  cron-validation.ts  feature-flags.test.ts  feature-flags.ts  format-duration.test.ts  format-duration.ts  format-relative-time.test.ts  format-relative-time.ts  log.test.ts  log.ts  platform-runtime.test.ts  platform-runtime.ts  playwright-harness.test.ts  playwright-harness.ts  responsive.ts  (+4 more)
src-tauri/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_zh.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  process_cleanup.rs  runtime_logic.rs  standalone_cli.rs
(+3818 files in other folders)
